cluster/manifests/grafana/overlays/prod/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: argocd
status:
  loadBalancer: {}
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.curibio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
